src/objects/cb5__CBReportConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>cb5__CBReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Report</label>
        <referenceTo>cb5__CBReport__c</referenceTo>
        <relationshipLabel>CB Report Configurations</relationshipLabel>
        <relationshipName>CBReportConfigurations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cb5__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__DisplayUnits__c</fullName>
        <label>Display Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whole Units</fullName>
                    <default>true</default>
                    <label>Whole Units</label>
                </value>
                <value>
                    <fullName>Thousands</fullName>
                </value>
                <value>
                    <fullName>Millions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__FloatPointCell__c</fullName>
        <label>Float Point Cell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.00</fullName>
                    <default>true</default>
                    <label>1.00</label>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cb5__Grouping__c</fullName>
        <label>Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SubRows__c</fullName>
        <label>SubRows</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__SubtotalNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Subtotal Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CB Report Configuration</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Report Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Report Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>